feat: 카카오 로그인/FCM/외부 크롤러 통합 및 보안 정리
- Kakao OAuth 로그인, Firebase FCM 푸시 알림 연동 (앱/서버)
- 위비티/씽굿 외부 공모전 크롤러 및 알림 스케줄러 추가
- Docker/Docker Compose, GitHub Actions CI 워크플로우, EAS 빌드 설정 추가
- 관리자 초기 계정 하드코딩 제거 → ADMIN_INIT_* 환경변수 주입
- CORS allowedHeaders를 와일드카드에서 필요한 헤더만 허용하도록 제한
- 비밀번호 재설정 시 임시 비밀번호가 로그에 남는 문제 제거, 12자리 UUID로 강도 상향
- CrawlService 중복 import 및 미사용 ScholarshipAttachment/Transactional 참조 제거
- 로그아웃 경로의 불필요한 console.log 제거

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>